Issue 38: Fix desktop header search form alignment.

--- a/assets/src/css/components/_site-header.scss
+++ b/assets/src/css/components/_site-header.scss
@@ -181,6 +181,7 @@
 			display: flex;
 			flex-flow: row nowrap;
 			justify-content: space-between;
+			align-items: center;
 			transform: none;
 			transition: none;
 			padding: 6px 0;
